Improved on HTML and CSS(might add pagination), ready to work on backend

--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
     <div id ="leftside">
       <div id="textbox">
         <div class="title">
-          <h1>Task Manager</h1>
+          <h1 class="textboxtext">Task Manager</h1>
         </div>
         <div class="info">
-          <p>This is how to use the app</p>
+          <p>This is how to use the app, I will write instructions here at another time.</p>
         </div>
       </div>
       <div id="alltasks">
         <div id="taskbar">
-          <a class="AddNew"></a>
+          <div class="topnav">
+            <input type="text" placeholder="Search..">
+          </div>
+          <a class="filter">Filter</a>
+          <a class="AddNew">New Task</a>
         </div>
         <div id="viewboard">
           
@@ -28,8 +32,82 @@
       </div>
     </div>
     <div id="calender">
-      <h1>2024</h1>
-      <div class="monthbox">
+      <div id="YearNum">
+        <h1>2024</h1>
+      </div>
+      <div id="monthbox">
+        <div class="month">
+          <button type="button" class="collapsible">Jan</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">Feb</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">Mar</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">Apr</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">May</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">Jun</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">Jul</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">Aug</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">Sep</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">Oct</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">Nov</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
+        <div class="month">
+          <button type="button" class="collapsible">Dec</button>
+          <div class="content">
+            <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
