Made tasks collapseable and added pin button, created some empty classes for calender, ready to design task table in MongoDB

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -27,7 +27,15 @@
           <a class="AddNew">New Task</a>
         </div>
         <div id="viewboard">
-          
+          <div class="task">
+            <div class="task-main collapsible">
+              <div class="maininfo">Jan</div>
+              <button class="pin-button">Pin</button>
+            </div>
+            <div class="task-body content">
+              <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -37,73 +45,73 @@
       </div>
       <div id="monthbox">
         <div class="month">
-          <button type="button" class="collapsible">Jan</button>
+          <div class="collapsible">Jan</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">Feb</button>
+          <div class="collapsible">Feb</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">Mar</button>
+          <div class="collapsible">Mar</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">Apr</button>
+          <div class="collapsible">Apr</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">May</button>
+          <div class="collapsible">May</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">Jun</button>
+          <div class="collapsible">Jun</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">Jul</button>
+          <div class="collapsible">Jul</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">Aug</button>
+          <div class="collapsible">Aug</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">Sep</button>
+          <div class="collapsible">Sep</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">Oct</button>
+          <div class="collapsible">Oct</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">Nov</button>
+          <div class="collapsible">Nov</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
         </div>
         <div class="month">
-          <button type="button" class="collapsible">Dec</button>
+          <div class="collapsible">Dec</div>
           <div class="content">
             <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
           </div>
