Added unconvential method of importing swal. Implemented the tasks class.

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -6,7 +6,8 @@
   <title>Task Manager</title>
   <link rel="stylesheet" href="style.css">
   <script type="module" src="script.js"></script>
-</head>
+  <link rel="stylesheet" href="./static/sweetalert2/dist/sweetalert2.css">
+  <script type="module" src="./static/sweetalert2/src/sweetalert2.js"></script> 
 <body>
   <div id="mainpage">
     <div id ="leftside">
@@ -27,7 +28,7 @@
           <a class="AddNew">New Task</a>
         </div>
         <div id="viewboard">
-          <div class="task">
+          <!-- <div class="task">
             <div class="task-main collapsible">
               <div class="maininfo">Jan</div>
               <button class="pin-button">Pin</button>
@@ -36,6 +37,15 @@
               <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
             </div>
           </div>
+          <div class="task">
+            <div class="task-main collapsible">
+              <div class="maininfo">Jan</div>
+              <button class="pin-button">Pin</button>
+            </div>
+            <div class="task-body content">
+              <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+            </div>
+          </div> -->
         </div>
       </div>
     </div>
