--- a/server/static/index.html
+++ b/server/static/index.html
@@ -8,6 +8,7 @@
   <script type="module" src="script.js"></script>
   <link rel="stylesheet" href="./static/sweetalert2/dist/sweetalert2.css">
   <script type="module" src="./static/sweetalert2/src/sweetalert2.js"></script> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <body>
   <div id="mainpage">
     <div id ="leftside">
@@ -24,28 +25,37 @@
           <div class="topnav">
             <input type="text" placeholder="Search..">
           </div>
+          <a class="sort">Sort</a>
           <a class="filter">Filter</a>
           <a class="AddNew">New Task</a>
         </div>
         <div id="viewboard">
-          <!-- <div class="task">
-            <div class="task-main collapsible">
-              <div class="maininfo">Jan</div>
-              <button class="pin-button">Pin</button>
-            </div>
-            <div class="task-body content">
-              <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
-            </div>
-          </div>
           <div class="task">
             <div class="task-main collapsible">
-              <div class="maininfo">Jan</div>
-              <button class="pin-button">Pin</button>
+              <div class="maininfo">Book doctor appointment now</div>
+              <div class="duedate" id="dueDate">Due: Today</div>
+              <div class="complete-button side-button">
+                <i class="fa-solid fa-check"></i>
+              </div>
+              <div class="edit-button side-button">
+                <i class="fa-solid fa-pen-to-square"></i>
+              </div>
+              <div class="pin-button side-button">
+                <i class="fa-solid fa-thumbtack"></i>
+              </div>
+              <div class="delete-button side-button">
+                <i class="fa-solid fa-trash"></i>
+              </div>
             </div>
             <div class="task-body content">
-              <p>The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to</p>
+              <p class="main-decrp">
+                The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to
+              </p>
+              <div class="addtional-notes">
+                More stuff about how to code, nothing to learn from reading about this description its pretty useless and has no stubstance ok? good for you see you later i think imalmost finished writing this.
+              </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
