Added functionality to all html buttons, modified tasks so that they hold their id

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -17,45 +17,19 @@
           <h1 class="textboxtext">Task Manager</h1>
         </div>
         <div class="info">
-          <p>This is how to use the app, I will write instructions here at another time.</p>
+          <p>This is how to use the app, I will write instructions here at another time. BTW months is not in a completed state</p>
         </div>
       </div>
       <div id="alltasks">
         <div id="taskbar">
           <div class="topnav">
-            <input type="text" placeholder="Search..">
+            <input type="text" placeholder="Search by name..">
           </div>
           <a class="sort">Sort</a>
           <a class="filter">Filter</a>
           <a class="AddNew">New Task</a>
         </div>
         <div id="viewboard">
-          <div class="task">
-            <div class="task-main collapsible">
-              <div class="maininfo">Book doctor appointment now</div>
-              <div class="duedate" id="dueDate">Due: Today</div>
-              <div class="complete-button side-button">
-                <i class="fa-solid fa-check"></i>
-              </div>
-              <div class="edit-button side-button">
-                <i class="fa-solid fa-pen-to-square"></i>
-              </div>
-              <div class="pin-button side-button">
-                <i class="fa-solid fa-thumbtack"></i>
-              </div>
-              <div class="delete-button side-button">
-                <i class="fa-solid fa-trash"></i>
-              </div>
-            </div>
-            <div class="task-body content">
-              <p class="main-decrp">
-                The secret there is to use box-sizing: border-box, and some padding to make the second div height 100%, but move it's content down 50px. Then wrap the content in a div with overflow: auto to contain the scrollbar. Pay attention to z-indexes to
-              </p>
-              <div class="addtional-notes">
-                More stuff about how to code, nothing to learn from reading about this description its pretty useless and has no stubstance ok? good for you see you later i think imalmost finished writing this.
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
