All buttons are now working, still need to polish up a bit and code needs some serious refactoring

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -25,6 +25,9 @@
           <div class="topnav">
             <input type="text" placeholder="Search by name..">
           </div>
+          <div class="refresh">
+            <i class="fa-solid fa-arrows-rotate"></i>
+          </div>
           <a class="sort">Sort</a>
           <a class="filter">Filter</a>
           <a class="AddNew">New Task</a>
